--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ node_modules
 # Users Environment Variables
 .lock-wscript
 
+# Developpement Directories
+out
+in
+
 # =========================
 # Operating System Files
 # =========================
