--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   "devDependencies": {
     "chai": "*",
     "jsdoc": "^3.4.0",
+    "jsdoc-to-markdown": "^1.3.2",
     "minami": "^1.1.1",
     "mocha": "*"
   },
   "scripts": {
     "example": "node example.js",
     "test": "mocha ./test/*.js",
-    "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose"
+    "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose",
+    "generate-docs-md": "node_modules/.bin/jsdoc2md csgo-data-parser.js > out/docs/api.md"
   },
   "keywords": [
     "csgo",
