--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "chai": "*",
+    "codeclimate-test-reporter": "^0.1.1",
+    "istanbul": "^0.4.1",
     "jsdoc": "^3.4.0",
     "jsdoc-to-markdown": "^1.3.2",
     "minami": "^1.1.1",
@@ -23,7 +25,7 @@
   },
   "scripts": {
     "example": "node example.js",
-    "test": "mocha ./test/*.js",
+    "test": "istanbul cover node_modules/mocha/bin/_mocha ./test/*.js -- -R spec ",
     "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose",
     "generate-docs-md": "node_modules/.bin/jsdoc2md csgo-data-parser.js > out/docs/api.md"
   },
