--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ node_js:
   - "0.10"
   - "iojs"
 after_script:
-  - codeclimate-test-reporter < lcov.info
+  - codeclimate-test-reporter < coverage/lcov.info
