--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,7 +7,8 @@ engines:
         enabled: false
       no-eq-null:
         enabled: false
-      no-eq-null:
+      # Disable eqeqeq for no warning on combo undefined and null check
+      eqeqeq:
         enabled: false
   fixme:
     enabled: true
