--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-csgo-parser",
   "version": "0.0.4",
   "description": "Extract Items/Skins/... from raw VDF data files",
-  "main": "csgo-data-parser.js",
+  "main": "lib/csgo-data-parser.js",
   "readmeFilename": "README.md",
   "private": false,
   "directories": {},
@@ -27,7 +27,10 @@
     "example": "node example.js",
     "test": "istanbul cover node_modules/mocha/bin/_mocha ./test/*.js -- -R spec ",
     "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose",
-    "generate-docs-md": "node_modules/.bin/jsdoc2md csgo-data-parser.js > out/docs/api.md"
+    "generate-docs-md": "node_modules/.bin/jsdoc2md \"src/csgo-data-parser.js\" > out/docs/api.md",
+    "compile": "node_modules/.bin/babel -d lib/ src/",
+    "prepublish": "npm run compile",
+    "pretest": "npm run compile"
   },
   "keywords": [
     "csgo",
