--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "winston": "^2.1.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.4.0",
     "chai": "*",
     "codeclimate-test-reporter": "^0.1.1",
     "istanbul": "^0.4.1",
