--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose",
     "generate-docs-md": "node_modules/.bin/jsdoc2md \"src/csgo-data-parser.js\" > out/docs/api.md",
     "compile": "node_modules/.bin/babel --presets es2015 src -d lib",
-    "prepublish": "npm run compile"
+    "prepublish": "npm run compile",
+    "pretest": "npm run compile"
   },
   "keywords": [
     "csgo",
